Completed base css

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,9 @@
-{{space}}
-
 <div>
             <header>
                 <nav>
                     <ul>
-                        <li><a href="#">Current Showcase</a></li>
                         <li><a href="#">Archives</a></li>
+                        <li><a href="#">Current Showcase</a></li>
                     </ul>
                 </nav>
                 <div>
@@ -13,7 +11,7 @@
                     <h1>Graduate Showcase</h1>
                 </div>
             </header>
-            <div>
+            <div id="test">
                 <aside>
                     <ul>
                         <li><a href="#">Student Name</a></li>
@@ -24,20 +22,20 @@
                     </ul>
                 </aside>
                 <section>
-                    <div>
+                    <div id="robot">
                         <p>We would like to invite you all to attend August 13th at 4pm</p>
                     </div>
-                    <div>
+                    <div id="clock">
                         Count down frame
                     </div>
                 </section>
             </div>
-            <section>
-                <div>
+            <section id="studentinfo">
+                <div id="student">
                     <h3>Student Name</h3>
                     <p>My project is about how the...</p>
                 </div>
-                <div>
+                <div id="highlights">
                     <h2>Project Highlights</h2>
                     <ul>
                         <li>node.js - I used this to...</li>
@@ -47,8 +45,9 @@
                     </ul>
                 </div>
             </section>
-            <div>
+            <div id="archives">
                 <!---  Insert ideas for student presentation archives -->
+                <p>This is the area for student archives.</p>
             </div>
         </div>
 
