--- a/views/layouts/default.handlebars
+++ b/views/layouts/default.handlebars
@@ -3,6 +3,8 @@
 		<head>
 		<meta charset="UTF-8">
 		<title>Full Sail University - Web Design and Development Final Project Showcase</title>
+		<link rel="stylesheet" type="text/css" href="css/reset.css" />
+        <link rel="stylesheet" type="text/css" href="css/base.css" />
 	</head>
 	<body>
 
