--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,7 @@
                 </nav>
                 <div>
                     <h2>Full Sail University Web Design and Development</h2>
-                    <h1>Graduate Showcase</h1>
+                    <h1>Graduate Showcase - Auto release</h1>
                 </div>
             </header>
             <div id="test">
