--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,4 +1,4 @@
-div header nav ul li {
+/*div header nav ul li {
 	float: right;
 	list-style-type: none;
 	display: inline-block;
@@ -62,4 +62,4 @@ header nav ul li a {
 	clear: both;
 	background-color: #FF9900;
 
-}
+}*/
