--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,7 @@
             <div id="test">
                 <aside>
                     <ul>
-                        <li><a href="#">Student Name</a></li>
+                        <li><a href="#">Student ID</a></li>
                         <li><a href="#">Student Name</a></li>
                         <li><a href="#">Student Name</a></li>
                         <li><a href="#">Student Name</a></li>
