Prep for ProRubrics

--- a/views/layouts/default.handlebars
+++ b/views/layouts/default.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
 		<head>
 		<meta charset="UTF-8">
-		<title>Full Sail University - Web Design and Development Final Project Showcase</title>
+		<title>{{ seoPageTitle }}</title>
 		
     <link rel="stylesheet" href="css/build/main.css">
 	</head>
