--- a/views/layouts/default.handlebars
+++ b/views/layouts/default.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
 		<head>
 		<meta charset="UTF-8">
-			<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+			<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
 			<script src="js/main.js" type="text/javascript"></script>
 			<title>{{ seoPageTitle }}</title>
     		<link rel="stylesheet" href="css/build/main.css">
