dashboard problems with centering the text and pics

--- a/views/layouts/default.handlebars
+++ b/views/layouts/default.handlebars
@@ -8,7 +8,22 @@
 	</head>
 	<body>
 
-		{{{ body }}}
+		
+
+		<nav>
+			<a href="#"><img src="http://i.imgur.com/awDgrl8.png" id="logo"></a>
+			<a href=""><img src="http://i.imgur.com/O2PDYmn.png">Search</a>
+			<a href="" ><img src="#">Degree</a>
+			<a href="" ><img src="#">Class</a>
+		</nav>
+
+		<div id="elBody">
+
+			{{{ body }}}
+
+		</div>
+
+		
 
 	</body>
 </html>
