--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -2,6 +2,52 @@
 
 edit()
 
+html
+	background grey
+
+h1
+	text-align left
+	margin-left 10%
+	font-family arial
+	
+input
+	margin-left 10%
+	width 80%
+	height 30px
+	
+label
+	margin-left 10%
+	
+.createrubricbutton
+	margin-left 61%
+	margin-top 5%
+	margin-bottom 5%
+	background grey
+	width 30%
+	height 40px
+
+#topheader
+	col(6/6)
+	
+.logo
+	col(1/6)
+
+.siteheader
+	col(2/6)
+
+.searchbar
+	col(3/6)
+	margin-top 2%
+
+#box
+	col(4/4)
+
+.contentbox
+	col(2/4)
+	background lightgrey
+	margin-top 10%
+	margin-left 30%
+
 header
 		center(80%)
 	
@@ -17,3 +63,4 @@ nav ul li
 
 #test
 	clear both
+	
