--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,8 +8,8 @@
 <div id="box">
 	<div class="contentbox">
 		<h1> Create Your Rubric </h1>
-		<input type="text" placeholder="Type the title of your rubric here"/>
-		<button class="createrubricbutton"> Create Rubric </button>
+		<input type="text" ng-model="rubricName" placeholder="Type the title of your rubric here"/>
+		<button class="createrubricbutton" ng-click="rubric(rubricName)"> Create Rubric </button>
 	</div>
 </div>
 
