--- a/views/layouts/default.handlebars
+++ b/views/layouts/default.handlebars
@@ -3,7 +3,7 @@
 		<head>
 		<meta charset="UTF-8">
 			<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
-			<title>{{ seoPageTitle }}</title>
+            <title>{{ seoPageTitle }}</title>
     		<link rel="stylesheet" href="css/build/main.css">
 	</head>
 	<body>
@@ -26,6 +26,7 @@
 
     </div>
 
+    <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
     <script src="js/build/main.js" type="text/javascript"></script>
 	</body>
 </html>
