--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,3 @@
 		<h1> Create Your Rubric </h1>
 		<input type="text" ng-model="rubricName" placeholder="Type the title of your rubric here"/>
-		<button ng-click="rubric(rubricName)"> Create Rubric </button>
+		<button ng-click="rubricFunction(rubricName)"> Create Rubric </button>
