--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -2,83 +2,60 @@
 
 edit()
 
-html
-	background grey
-
-h1
-	text-align left
-	margin-left 10%
+	
+#sideNav
+	col(1/7)
+	span(1/7)
+	background gray
+	text-align center
+	height 700px
+	
+ul
+	padding-left 0
+	
+li
+	list-style-type none
+	
+ul li a
+	col(1/3)
+	stack()
+	padding 5% 0
+	text-decoration none
+	color white
+	font-size 1.4em
 	font-family arial
 	
-input
-	margin-left 10%
-	width 80%
-	height 30px
+ul li a:hover
+	background #424242
 	
-label
-	margin-left 10%
+#mainDefaultBody
+	col(6/7)
+	span(6/7)
+	background: -webkit-radial-gradient(red, green, blue); /* Safari 5.1 to 6.0 */
+    background: -o-radial-gradient(red, green, blue); /* For Opera 11.6 to 12.0 */
+    background: -moz-radial-gradient(red, green, blue); /* For Firefox 3.6 to 15 */
+    background: radial-gradient(red, green, blue); /* Standard syntax (must be last) */
+#rubricSearch
+	center(500px)
+	padding 2%
 	
-.createrubricbutton
-	margin-left 61%
-	margin-top 5%
-	margin-bottom 5%
-	background grey
-	width 30%
-	height 40px
-
-#topheader
-	col(6/6)
+div input
+	width 95%
+	font-size 1.5em
+	padding 2%
+	background-color white
 	
-.logo
-	col(1/6)
-
-.siteheader
-	col(2/6)
-
-.searchbar
-	col(3/6)
-	margin-top 2%
-
-#box
-	col(4/4)
-
-.contentbox
-	col(2/4)
-	background lightgrey
-	margin-top 10%
-	margin-left 30%
-
-header
-	center(80%)	
-	
-nav 
-	col(1/5)
-	span(1/5)
-	padding-bottom:100%
-	position:relative	
-	background: gray
-	
-#logo
-	center()
-	
-#elBody
-	col(4/5)
-	background: url("http://i.imgur.com/EOc88zU.png") no-repeat
-	max-width:100%
-	padding-bottom:100%
-
-a
-	stack()
-	font-size: 2em
-	padding: 10px 0px
-	border-bottom:1px gray solid
-	
-		
-h1
+#rubricSearch button
 	col(1/2)
-	color:purple
-	font-size:3em
-
-#test
-	clear both
+	shift(1/2)
+	margin-top 5%
+	background-color gray
+	font-size 1.5em	
+	border none
+	text-align center
+	padding 10px 0
+	
+#rubricSearch button:hover
+	background #424242
+	
 	
