--- a/views/layouts/default.handlebars
+++ b/views/layouts/default.handlebars
@@ -6,9 +6,23 @@
 			<title>{{ seoPageTitle }}</title>
     		<link rel="stylesheet" href="css/build/main.css">
 	</head>
+
     <body ng-app="ProRubric">
     <div ng-controller="mainController">
+
+	<div id="sideNav">
+		<ul>
+			<li><img src="http://i.imgur.com/Ft4ySZK.png" alt=""></li>
+			<li><a href="#">Search</a></li>
+			<li><a href="#">Degree</a></li>
+			<li><a href="#">Class</a></li>
+		</ul>
+	</div>
+			
+	<div id="mainDefaultBody">
+		
 			{{{ body }}}
+
     </div>
 
     <script src="js/build/main.js" type="text/javascript"></script>
