Connected with sockets able to post to mongo from front end form

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,8 @@
 	<div id="rubricSearch">
-		<h1> Create Your Rubric </h1>
-		<input type="text" ng-model="rubricName" placeholder="Type the title of your rubric here"/>
-		<button ng-click="rubric(rubricName)"> Create Rubric </button>
+		<h1> Create Your Degree</h1>
+		<label>Degree Name Here:</label>
+		<input type="text" ng-model="degreeTitle" placeholder=""/>
+		<label>Degree Acronym</label>
+        <input type="text" ng-model="degreeAcronym" placeholder=""/>
+        <button ng-click="rubric()"> Create Rubric </button>
 	</div>
