--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,5 +4,5 @@
 		<input type="text" ng-model="degreeTitle" placeholder=""/>
 		<label>Degree Acronym</label>
         <input type="text" ng-model="degreeAcronym" placeholder=""/>
-        <button ng-click="rubric()"> Create Rubric </button>
+        <button ng-click="degreeAdd()"> Create Rubric </button>
 	</div>
