--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -27,15 +27,8 @@ ul li a
 	
 ul li a:hover
 	background #424242
-	
-#mainDefaultBody
-	col(6/7)
-	span(6/7)
-	background: -webkit-radial-gradient(red, green, blue); /* Safari 5.1 to 6.0 */
-    background: -o-radial-gradient(red, green, blue); /* For Opera 11.6 to 12.0 */
-    background: -moz-radial-gradient(red, green, blue); /* For Firefox 3.6 to 15 */
-    background: radial-gradient(red, green, blue); /* Standard syntax (must be last) */
-#rubricSearch
+
+.degree
 	center(500px)
 	padding 2%
 	
@@ -44,8 +37,12 @@ div input
 	font-size 1.5em
 	padding 2%
 	background-color white
+
+.degree label
+  	font-family arial
+	font-weight bold
 	
-#rubricSearch button
+.degree button
 	col(1/2)
 	shift(1/2)
 	margin-top 5%
@@ -55,7 +52,7 @@ div input
 	text-align center
 	padding 10px 0
 	
-#rubricSearch button:hover
+.degree button:hover
 	background #424242
 	
 	
