Find call back added for find all.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,6 +7,6 @@
         <button ng-click="degreeAdd()"> Create Rubric </button>
 	</div>
 
-    <div ng-repeat="(key, value) in degreeData">
-        {[{key + ' ' + value}]}
+    <div ng-repeat="value in degreeData">
+        {[{value}]}
     </div>
