Dynamic data can now be moved from back end to front

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,13 +1,11 @@
-	<div class="degree">
-        {[{degreeData}]}
-        <ul>
-            <li ng-repeat="value in degreeData">{[{value.title}]}</li>
-        </ul>
+<div id="view">
+    {[{degreeData}]}
+    {[{5+5}]}
 
+</div>
+<div class="degree">
         <ul><li>dsfsdf</li></ul>
-
-        {[{degreeData}]}
-		<h1> Create Degree</h1>
+	    <h1> Create Degree</h1>
 		<label>Degree Name Here:</label>
 		<input type="text" ng-model="degreeTitle" placeholder=""/>
 		<label>Degree Acronym</label>
