--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,6 @@
 <div id="view">
-    {[{degreeData}]}
+    {[{degreeData.data}]}
     {[{5+5}]}
-
 </div>
 <div class="degree">
         <ul><li>dsfsdf</li></ul>
