--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,9 @@
 <div id="rubricSearch">
-
-        <ul>
-            <li ng-repeat="degree in degreeData">
-                {[{degree._id}]}
-            </li>
-        </ul>
-
-        <h1> Create Degree</h1>
+		<ul >
+			<li ng-repeat="x in stuff">{[{x._id}]}</li>
+		</ul>
+		{{{arrayData}}}
+        <h1> Create Degree {[{log}]} </h1>
         <label>Degree Name Here:</label>
         <input type="text" ng-model="degreeTitle" placeholder=""/>
         <label>Degree Acronym</label>
@@ -16,138 +13,7 @@
 
 <!--******************** Pintrest like coloumns ********************-->
 	<div id="wrapper">
-	<div id="columns">
-		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/2/2v3VhAp.png" />
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-				Sed feugiat consectetur pellentesque. Nam ac elit risus, 
-				ac blandit dui. Duis rutrum porta tortor ut convallis.
-				Duis rutrum porta tortor ut convallis.
-			</p>
-		</div>
-	
-		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/1/1swi3Qy.png" />
-			<p>
-				Donec a fermentum nisi. 
-			</p>
-		</div>
-	
-		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/6/6f3nXse.png" />
-			<p>
-				Nullam eget lectus augue. Donec eu sem sit amet ligula 
-				faucibus suscipit. Suspendisse rutrum turpis quis nunc 
-				convallis quis aliquam mauris suscipit.
-			</p>
-		</div>
-	
-		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/8/8kEc1hS.png" />
-			<p>
-				Nullam eget lectus augue. Donec eu sem sit amet ligula 
-				faucibus suscipit. Suspendisse rutrum turpis quis nunc 
-				convallis quis aliquam mauris suscipit.
-			</p>
-		</div>
-	
-		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/1/1swi3Qy.png" />
-			<p>
-				Donec a fermentum nisi. Integer dolor est, commodo ut 
-				sagittis vitae, egestas at augue. 
-			</p>
-		</div>
-	
-		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/6/6f3nXse.png" />
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-				Sed feugiat consectetur pellentesque. Nam ac elit risus, 
-				ac blandit dui. Duis rutrum porta tortor ut convallis.
-				Duis rutrum porta tortor ut convallis.
-			</p>
-		</div>	
-		
-		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/2/2v3VhAp.png" />
-			<p>
-				Nullam eget lectus augue. Donec eu sem sit amet ligula 
-				faucibus suscipit. Suspendisse rutrum turpis quis nunc 
-				convallis quis aliquam mauris suscipit.
-				Duis rutrum porta tortor ut convallis.
-			</p>
-		</div>
-	
-		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/1/1swi3Qy.png" />
-			<p>
-				Nullam eget lectus augue. 
-			</p>
-		</div>
-	
-		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/8/8kEc1hS.png" />
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-				Sed feugiat consectetur pellentesque. 
-			</p>
-		</div>
-	
-		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/2/2v3VhAp.png" />
-			<p>
-				Donec a fermentum nisi. Integer dolor est, commodo ut 
-				sagittis vitae, egestas at augue. Suspendisse id nulla 
-				ac urna vestibulum mattis. Duis rutrum porta tortor ut convallis.
-			</p>
-		</div>
-	
-		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/1/1swi3Qy.png" />
-			<p>
-				Donec a fermentum nisi. Integer dolor est, commodo ut 
-				sagittis vitae, egestas at augue. Suspendisse id nulla 
-				ac urna vestibulum mattis. 
-			</p>
-		</div>
-	
-		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/6/6f3nXse.png" />
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-				Sed feugiat consectetur pellentesque. Nam ac elit risus, 
-				ac blandit dui. Duis rutrum porta tortor ut convallis.
-			</p>
-		</div>	
-		
-		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/2/2v3VhAp.png" />
-			<p>
-				Donec a fermentum nisi. Integer dolor est, commodo ut 
-				sagittis vitae, egestas at augue. Suspendisse id nulla 
-				ac urna vestibulum mattis. 
-			</p>
-		</div>
-	
-		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/1/1swi3Qy.png" />
-			<p>
-				Donec a fermentum nisi. Integer dolor est, commodo ut 
-				sagittis vitae, egestas at augue. Suspendisse id nulla 
-				ac urna vestibulum mattis. 
-			</p>
-		</div>
-	
-		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/6/6f3nXse.png" />
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-				Sed feugiat consectetur pellentesque. Nam ac elit risus, 
-				ac blandit dui. Duis rutrum porta tortor ut convallis.
-			</p>
-		</div>
+	<div class="columns">
 	</div>
 </div>
 
