--- a/views/layouts/default.handlebars
+++ b/views/layouts/default.handlebars
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-		<head>
-		<meta charset="UTF-8">
-			<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
-            <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
-            <script src="js/build/main.js" type="text/javascript"></script>
-			<title>{{ seoPageTitle }}</title>
-    		<link rel="stylesheet" href="css/build/main.css">
-	</head>
+<head>
+    <meta charset="UTF-8">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
+    <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
+    <script src="js/build/main.js" type="text/javascript"></script>
+    <title>{{ seoPageTitle }}</title>
+    <link rel="stylesheet" href="css/build/main.css">
+</head>
 
-    <body ng-app="ProRubric">
-    <div ng-controller="mainController">
+<body ng-app="ProRubric">
+<div ng-controller="mainController">
 
-	<div id="sideNav">
-		<ul>
-			<li><img src="http://i.imgur.com/Ft4ySZK.png" alt=""></li>
-			<li><a href="#">Search</a></li>
-			<li><a href="#">Degree</a></li>
-			<li><a href="#">Class</a></li>
-		</ul>
-	</div>
-			{{{ body }}}
-	</body>
+    <div id="sideNav">
+        <ul>
+            <li><img src="http://i.imgur.com/Ft4ySZK.png" alt=""></li>
+            <li><a href="#">Search</a></li>
+            <li><a href="#">Degree</a></li>
+            <li><a href="#">Class</a></li>
+        </ul>
+    </div>
+    {{{ body }}}
+</div>
+</body>
 </html>
