--- a/views/layouts/default.handlebars
+++ b/views/layouts/default.handlebars
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular-route.js" type="text/javascript"></script>
     <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
     <script src="js/build/main.js" type="text/javascript"></script>
-    <title>{{ seoPageTitle }}</title>
+    <title></title>
     <link rel="stylesheet" href="css/build/main.css">
 </head>
 
 <body ng-app="ProRubric">
-<div ng-controller="mainController">
-    <div id="sideNav">
+ <div id="sideNav">
         <ul>
             <li><img src="http://i.imgur.com/Ft4ySZK.png" alt=""></li>
             <li><a href="#">Search</a></li>
@@ -20,6 +20,7 @@
             <li><a href="#">Class</a></li>
         </ul>
     </div>
+ <div ng-view>
     {{{ body }}}
 </div>
 </body>
