stashing the design of dashboard

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -2,13 +2,15 @@
 
 edit()
 
-	
 #sideNav
 	col(1/7)
 	span(1/7)
 	background gray
 	text-align center
 	height 700px
+	
+.logo
+	margin-bottom 6%
 	
 ul
 	padding-left 0
@@ -76,6 +78,9 @@ div input
 	column-count 3
 	column-gap 15px
 	column-fill auto
+	
+h3
+	text-align center
 
 
 .pin 
@@ -91,7 +96,6 @@ div input
 	padding-bottom 5px
 	background -webkit-linear-gradient(45deg, #FFF, #F9F9F9)
 	opacity 1
-	
 	-webkit-transition all .2s ease
 	-moz-transition all .2s ease
 	-o-transition all .2s ease
