--- a/views/layouts/default.handlebars
+++ b/views/layouts/default.handlebars
@@ -12,7 +12,7 @@
 
 	<div id="sideNav">
 		<ul>
-			<li><img src="http://i.imgur.com/Ft4ySZK.png" alt=""></li>
+			<li><img src="http://i.imgur.com/Ft4ySZK.png" class="logo" alt=""></li>
 			<li><a href="#">Search</a></li>
 			<li><a href="#">Degree</a></li>
 			<li><a href="#">Class</a></li>
@@ -20,7 +20,7 @@
 	</div>
 			
 	<div id="mainDefaultBody">
-		
+
 			{{{ body }}}
 
     </div>
