--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,6 +9,7 @@
 	<div id="columns">
 		<div class="pin">
 			<img src="http://cssdeck.com/uploads/media/items/2/2v3VhAp.png" />
+			<h3>Title Goes Here</h3>
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 				Sed feugiat consectetur pellentesque. Nam ac elit risus, 
@@ -19,6 +20,7 @@
 	
 		<div class="pin">
 			<img src="http://cssdeck.com/uploads/media/items/1/1swi3Qy.png" />
+			<h3>Title Goes Here</h3>
 			<p>
 				Donec a fermentum nisi. 
 			</p>
@@ -26,6 +28,7 @@
 	
 		<div class="pin">
 			<img src="http://cssdeck.com/uploads/media/items/6/6f3nXse.png" />
+			<h3>Title Goes Here</h3>
 			<p>
 				Nullam eget lectus augue. Donec eu sem sit amet ligula 
 				faucibus suscipit. Suspendisse rutrum turpis quis nunc 
@@ -35,6 +38,7 @@
 	
 		<div class="pin">
 			<img src="http://cssdeck.com/uploads/media/items/8/8kEc1hS.png" />
+			<h3>Title Goes Here</h3>
 			<p>
 				Nullam eget lectus augue. Donec eu sem sit amet ligula 
 				faucibus suscipit. Suspendisse rutrum turpis quis nunc 
@@ -44,6 +48,7 @@
 	
 		<div class="pin">
 			<img src="http://cssdeck.com/uploads/media/items/1/1swi3Qy.png" />
+			<h3>Title Goes Here</h3>
 			<p>
 				Donec a fermentum nisi. Integer dolor est, commodo ut 
 				sagittis vitae, egestas at augue. 
@@ -52,6 +57,7 @@
 	
 		<div class="pin">
 			<img src="http://cssdeck.com/uploads/media/items/6/6f3nXse.png" />
+			<h3>Title Goes Here</h3>
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 				Sed feugiat consectetur pellentesque. Nam ac elit risus, 
