Added degress and rubric buttons

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,135 +8,129 @@
 	<div id="wrapper">
 	<div id="columns">
 		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/2/2v3VhAp.png" />
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-				Sed feugiat consectetur pellentesque. Nam ac elit risus, 
-				ac blandit dui. Duis rutrum porta tortor ut convallis.
-				Duis rutrum porta tortor ut convallis.
-			</p>
+			<img src="http://placehold.it/140x100">
+
+			<h2 class="classname"> Web Design and Development </h2>
+			<h4 class="rubrics"> 4 Rubrics </h4>
 		</div>
 	
 		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/1/1swi3Qy.png" />
-			<p>
-				Donec a fermentum nisi. 
-			</p>
+			<img src="http://placehold.it/140x100">
+
+			<h2 class="classname"> Deployment of Web Applications </h2>
+
+			<button type="button" class="rubricbuttons"> Ice Breakers </button>
+			<button type="button" class="rubricbuttons"> Lab 2 </button>
+			<button type="button" class="rubricbuttons"> Deployment 1 </button>
+			<button type="button" class="rubricbuttons"> Final Project 1 </button>
 		</div>
 	
 		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/6/6f3nXse.png" />
-			<p>
-				Nullam eget lectus augue. Donec eu sem sit amet ligula 
-				faucibus suscipit. Suspendisse rutrum turpis quis nunc 
-				convallis quis aliquam mauris suscipit.
-			</p>
+			<img src="http://placehold.it/140x100">
+
+			<h2 class="classname"> Web Design and Development </h2>
+			<h4 class="rubrics"> 4 Rubrics </h4>
 		</div>
 	
 		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/8/8kEc1hS.png" />
-			<p>
-				Nullam eget lectus augue. Donec eu sem sit amet ligula 
-				faucibus suscipit. Suspendisse rutrum turpis quis nunc 
-				convallis quis aliquam mauris suscipit.
-			</p>
+			<img src="http://placehold.it/140x100">
+
+			<h2 class="classname"> Web Design and Development </h2>
+			<h4 class="rubrics"> 4 Rubrics </h4>
 		</div>
 	
 		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/1/1swi3Qy.png" />
-			<p>
-				Donec a fermentum nisi. Integer dolor est, commodo ut 
-				sagittis vitae, egestas at augue. 
-			</p>
+			<img src="http://placehold.it/140x100">
+
+			<h2 class="classname"> Principles and Production </h2>
+			<button type="button" class="rubricbuttons"> Ice Breakers </button>
+			<button type="button" class="rubricbuttons"> Lab 2 </button>
+			<button type="button" class="rubricbuttons"> Deployment 1 </button>
+			<button type="button" class="rubricbuttons"> Final Project 1 </button>
 		</div>
 	
 		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/6/6f3nXse.png" />
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-				Sed feugiat consectetur pellentesque. Nam ac elit risus, 
-				ac blandit dui. Duis rutrum porta tortor ut convallis.
-				Duis rutrum porta tortor ut convallis.
-			</p>
+			<img src="http://placehold.it/140x100">
+
+			<h2 class="classname"> Web Design and Development </h2>
+			<h4 class="rubrics"> 4 Rubrics </h4>
 		</div>	
 		
 		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/2/2v3VhAp.png" />
-			<p>
-				Nullam eget lectus augue. Donec eu sem sit amet ligula 
-				faucibus suscipit. Suspendisse rutrum turpis quis nunc 
-				convallis quis aliquam mauris suscipit.
-				Duis rutrum porta tortor ut convallis.
-			</p>
+			<img src="http://placehold.it/140x100">
+
+			<h2 class="classname"> Web Design and Development </h2>
+			<h4 class="rubrics"> 4 Rubrics </h4>
 		</div>
 	
 		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/1/1swi3Qy.png" />
-			<p>
-				Nullam eget lectus augue. 
-			</p>
+			<img src="http://placehold.it/140x100">
+
+			<h2 class="classname"> Advanced Topics in Web </h2>
+
+			<button type="button" class="rubricbuttons"> Ice Breakers </button>
+			<button type="button" class="rubricbuttons"> Lab 2 </button>
+			<button type="button" class="rubricbuttons"> Deployment 1 </button>
+			<button type="button" class="rubricbuttons"> Final Project 1 </button>
 		</div>
 	
 		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/8/8kEc1hS.png" />
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-				Sed feugiat consectetur pellentesque. 
-			</p>
+			<img src="http://placehold.it/140x100">
+
+			<h2 class="classname"> Web Design and Development </h2>
+			<h4 class="rubrics"> 4 Rubrics </h4>
 		</div>
 	
 		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/2/2v3VhAp.png" />
-			<p>
-				Donec a fermentum nisi. Integer dolor est, commodo ut 
-				sagittis vitae, egestas at augue. Suspendisse id nulla 
-				ac urna vestibulum mattis. Duis rutrum porta tortor ut convallis.
-			</p>
+		<img src="http://placehold.it/140x100">
+
+			<h2 class="classname"> Web Design and Development </h2>
+			<h4 class="rubrics"> 4 Rubrics </h4>
 		</div>
 	
 		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/1/1swi3Qy.png" />
-			<p>
-				Donec a fermentum nisi. Integer dolor est, commodo ut 
-				sagittis vitae, egestas at augue. Suspendisse id nulla 
-				ac urna vestibulum mattis. 
-			</p>
+		<img src="http://placehold.it/140x100">
+
+			<h2 class="classname"> Web Design and Development </h2>
+
+			<button type="button" class="rubricbuttons"> Ice Breakers </button>
+			<button type="button" class="rubricbuttons"> Lab 2 </button>
+			<button type="button" class="rubricbuttons"> Deployment 1 </button>
+			<button type="button" class="rubricbuttons"> Final Project 1 </button>
+
 		</div>
 	
 		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/6/6f3nXse.png" />
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-				Sed feugiat consectetur pellentesque. Nam ac elit risus, 
-				ac blandit dui. Duis rutrum porta tortor ut convallis.
-			</p>
+		<img src="http://placehold.it/140x100">
+
+			<h2 class="classname"> Web Design and Development </h2>
+			<h4 class="rubrics"> 4 Rubrics </h4>
 		</div>	
 		
 		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/2/2v3VhAp.png" />
-			<p>
-				Donec a fermentum nisi. Integer dolor est, commodo ut 
-				sagittis vitae, egestas at augue. Suspendisse id nulla 
-				ac urna vestibulum mattis. 
-			</p>
+			<img src="http://placehold.it/140x100">
+
+			<h2 class="classname"> Web Design and Development </h2>
+			<h4 class="rubrics"> 4 Rubrics </h4>
 		</div>
 	
 		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/1/1swi3Qy.png" />
-			<p>
-				Donec a fermentum nisi. Integer dolor est, commodo ut 
-				sagittis vitae, egestas at augue. Suspendisse id nulla 
-				ac urna vestibulum mattis. 
-			</p>
+			<img src="http://placehold.it/140x100">
+
+			<h2 class="classname"> Streaming Media Servers </h2>
+
+			<button type="button" class="rubricbuttons"> Ice Breakers </button>
+			<button type="button" class="rubricbuttons"> Lab 2 </button>
+			<button type="button" class="rubricbuttons"> Deployment 1 </button>
+			<button type="button" class="rubricbuttons"> Final Project 1 </button>
+
 		</div>
 	
 		<div class="pin">
-			<img src="http://cssdeck.com/uploads/media/items/6/6f3nXse.png" />
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-				Sed feugiat consectetur pellentesque. Nam ac elit risus, 
-				ac blandit dui. Duis rutrum porta tortor ut convallis.
-			</p>
+			<img src="http://placehold.it/140x100">
+
+			<h2 class="classname"> Web Design and Development </h2>
+			<h4 class="rubrics"> 4 Rubrics </h4>
 		</div>
 	</div>
 </div>
