--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -2,6 +2,21 @@
 
 edit()
 
+.rubricbuttons
+  	color #000000
+  	font-size 21px
+  	padding 10px 20px 10px 20px
+  	margin 2% 0 2% 0
+  	font-size .7em
+  	text-align left
+  	width 100%
+
+.classname
+	font-size 1.3em
+	text-align center
+
+.rubrics
+	text-align center
 	
 #sideNav
 	col(1/7)
