--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,1 @@
-<div id="rubricSearch">
-    <h1> Create Degree</h1>
-    <label>Degree Name Here:</label>
-    <input type="text" ng-model="degreeTitle" placeholder=""/>
-    <label>Degree Acronym</label>
-    <input type="text" ng-model="degreeAcronym" placeholder=""/>
-    <button ng-click="degreeAdd()"> Create Rubric</button>
-</div>
-
-<!--******************** Pintrest like coloumns ********************-->
-<div id="wrapper">
-    <div class="columns"></div>
-</div>
-
-<!--******************** Pintrest like coloumns END ********************-->
+<div ng-view></div>
