Mongo crashing errors, fixed uglify and removed install dependancy?

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -28,7 +28,7 @@ ul li a
 ul li a:hover
 	background #424242
 
-#mainDefaultBody
+.mainDefaultBody
 	col(6/7)
 	span(6/7)
 	//Putting CSS Gradients on this breaks the Jeet apparently.
