--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,4 @@
-<div ng-controller="mainController">
+<div ng-controller="mainController" class="mainDefaultBody">
     <div id="rubricSearch">
         <h1> Create Degree</h1>
         <label>Degree Name Here:</label>
