Add : add rubric functionality as well as the view for it

--- a/public/views/addRubric.html
+++ b/public/views/addRubric.html
@@ -1,19 +1,16 @@
 <div ng-controller="secondController" class="addRubric">
-	<form action="#">
-		<div>
-			<h1>Abriviated title</h1>
-			<h2>Full title here</h2>
-		</div>
-		
-		<label for="courseTile">RubricTitle</label>
-		<input type="text" name="title" id="courseTitle" placeholder="title">
+   
+    <div id="rubricSearch">
+        <h1> Create Rubric</h1>
+        
+        <label>Rubic Name:</label>
+        <input type="text" ng-model="rubricTitle" placeholder="" />
+        
+        <label>Content:</label>
+        <input type="text" ng-model="rubricContent" placeholder="" />
+        
+        <button ng-click="rubricAdd()"> Create </button>
+        
+    </div>
 
-		<label for="courseCode">Section Titles</label>
-		<input type="text" name="code" id="courseCode" placeholder="Section Title">
-
-		<label for="courseCode">Grade Options</label>
-		<input type="text" name="code" id="courseCode" placeholder="Grade Options(100, 75, 50, 25, 0)">
-
-		<input type="submit" value="Add">
-	</form>
 </div>
