--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,5 @@
 <div ng-controller="mainController" class="mainDefaultBody">
+   
     <div id="rubricSearch">
         <h1> Create Degree</h1>
         <label>Degree Name Here:</label>
@@ -7,8 +8,10 @@
         <input type="text" ng-model="degreeAcronym" placeholder=""/>
         <button ng-click="degreeAdd()"> Create Rubric</button>
     </div>
+    
     <div id="wrapper">
         <div class="columns">
 
         </div>
     </div>
+</div>
