Course and Degree can now be added and listed on diffrent routes

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -4,6 +4,8 @@ hover = background #424242
 
 edit()
 
+
+
 #sideNav
 	col(1/7)
 	span(1/7)
@@ -199,7 +201,8 @@ h3
 	text-align center
 
 
-.pin 
+.pin
+  	width 100%
 	display inline-block
 	background #FEFEFE
 	border 2px solid #FAFAFA
