--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,14 +1,14 @@
-<div ng-controller="mainController" class="mainDefaultBody">
+<div ng-controller="degreeController" class="mainDefaultBody">
     <div id="rubricSearch">
         <h1> Create Degree</h1>
         <label>Degree Name Here:</label>
-        <input type="text" ng-model="degreeTitle" placeholder=""/>
+        <input type="text" ng-model="degreeTitle" />
         <label>Degree Acronym</label>
-        <input type="text" ng-model="degreeAcronym" placeholder=""/>
+        <input type="text" ng-model="degreeAcronym" />
         <button ng-click="degreeAdd()"> Create Rubric</button>
     </div>
     <div id="wrapper">
         <div class="columns">
-
         </div>
     </div>
+</div>
