--- a/views/layouts/default.handlebars
+++ b/views/layouts/default.handlebars
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular-route.js" type="text/javascript"></script>
     <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
     <script src="js/build/main.js" type="text/javascript"></script>
