Edit naming conventions

--- a/public/views/addDegree.html
+++ b/public/views/addDegree.html
@@ -1,5 +1,7 @@
 <div ng-controller="degreeController" class="mainDefaultBody">
     <div id="rubricSearch">
+        <tags-input ng-model="tags"></tags-input>
+
         <h1> Create Degree</h1>
         <label>Degree Name Here:</label>
         <input type="text" ng-model="degreeTitle" />
