made a few view changes to forms and now duplicate data does not happen when submitted

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -40,8 +40,8 @@ ul li a:hover
 	//Putting CSS Gradients on this breaks the Jeet apparently.
 
 #rubricSearch
-	center(500px)
-	padding 2%
+  col(3/3)
+  span(3/3)
 
 .addRubric
 	div
