--- a/views/layouts/default.handlebars
+++ b/views/layouts/default.handlebars
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular-route.js" type="text/javascript"></script>
     <script src="/js/ng-tags-input.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/ng-tags-input.css">
@@ -17,9 +16,8 @@
  <div id="sideNav">
         <ul>
             <li><img src="http://i.imgur.com/Ft4ySZK.png" alt=""></li>
-            <li><a href="#">Search</a></li>
-            <li><a href="#">Degree</a></li>
-            <li><a href="#">Class</a></li>
+            <li><a href="#/">Degree</a></li>
+            <li><a href="#/course">Course</a></li>
         </ul>
     </div>
     {{{ body }}}
