--- a/public/views/audit.html
+++ b/public/views/audit.html
@@ -3,18 +3,20 @@
 	<p>TEST BUTTON: <button ng-click="actionOutput()">
 			 			Output Audit
 			 		</button></p>
-	<p>{[{ rubric.auditProgress }]}% ({[{ rubric.totalLineItems }]} Total Items)</p>
+	<p>Progress Bar {[{ rubric.auditProgress }]}% ({[{ rubric.totalLineItems }]} Total Items)</p>
+	<h2>Audit Grade: {[{ rubric.auditGrade * 100 }]}% </h2>
 	<section data-ng-repeat="section in rubric.sections">
 		<header> {[{ section.title }]} </header>
 		<dl data-ng-repeat="lineItem in section.lineItems">
 			<aside>
 			 	<ol>
 			 		<li data-ng-repeat="tier in rubric.gradeTiers">
-			 		<button ng-click="actionGrade(lineItem._id, tier)">
-			 			{[{ tier }]}
+			 		<button data-ng-click="actionGrade(lineItem._id, tier)">
+			 			{[{ tier * 100 }]}
 			 		</button>
 			 		</li>
 			 	</ol>
+			 	<textarea data-ng-model="lineItem.comment"></textarea>
 			 </aside>
 			<dt>{[{ lineItem.title }]}</dt>
 			<dd>{[{ lineItem.content }]}</dd>
