creating addSection.html along with backend section functionality

--- a/public/views/addSection.html
+++ b/public/views/addSection.html
@@ -6,6 +6,6 @@
     <label for="gradeWeight">Enter Grade Weight: </label>
     <input type="text" ng-model="gradeWeights" name="code" id="gradeWeight" placeholder="Section Title">
 
-    <input ng-click="addSection()" type="submit" value="Add">
+    <input ng-click="addSection()" value="Add">
 
 </div>
