--- a/views/layouts/default.handlebars
+++ b/views/layouts/default.handlebars
@@ -13,7 +13,7 @@
 <body ng-app="ProRubric">
  <div id="sideNav">
         <ul>
-            <li><img src="http://i.imgur.com/Ft4ySZK.png" alt=""></li>
+            <li><a href="#" class="logo">Pro Rubrics</a></li>
             <li><a href="#">Search</a></li>
             <li><a href="#">Degree</a></li>
             <li><a href="#">Class</a></li>
@@ -22,5 +22,8 @@
  <div ng-view class='mainDefaultBody'>
     {{{ body }}}
 </div>
+
+
+
 </body>
 </html>
