--- a/public/views/addRubric.html
+++ b/public/views/addRubric.html
@@ -1,19 +1,1 @@
-<div ng-controller="rubricController" class="addRubric">
-   
-    <div id="rubricSearch">
-        <h1> Create Rubric</h1>
-        
-        <label>Rubic Name:</label>
-        <input type="text" ng-model="rubricTitle" placeholder="" />
-        
-        <label>Content:</label>
-        <input type="text" ng-model="rubricContent" placeholder="" />
-        
-                <label>Grade Tiers:</label>
-        <input type="text" ng-model="rubricTiers" placeholder="" />
-        
-        <button ng-click="rubricAdd()"> Create </button>
-        
-    </div>
-
-</div>
+<div ng-controller="rubricController" class="addRubric"><div id="rubricSearch"><h1>Create Rubric</h1><label>Rubic Name:</label><input type="text" ng-model="rubricTitle" placeholder=""><label>Content:</label><input type="text" ng-model="rubricContent" placeholder=""><label>Grade Tiers:</label><input type="text" ng-model="rubricTiers" placeholder=""> <button ng-click="rubricAdd()">Create</button></div></div>
