--- a/public/views/text.html
+++ b/public/views/text.html
@@ -1,3 +1,1 @@
-<div ng-controller="secondController">
-    <h3>fljflksjdfkljdsflsjld</h3>
-</div>
+<div ng-controller="secondController"><h3>fljflksjdfkljdsflsjld</h3></div>
