Fix: Sockets loading duplicates corrected. Degree now loads courses within itself.

--- a/public/views/addCourse.html
+++ b/public/views/addCourse.html
@@ -9,7 +9,7 @@
 		<button ng-click="courseAdd()"> Create Rubric</button>
 	</div>
 	<div id="wrapper">
-		<div class="columns">
+		<div class="courseColumns" ng-init="courseLoad()">
 		</div>
 	</div>
 </div>
