--- a/public/views/addDegree.html
+++ b/public/views/addDegree.html
@@ -8,7 +8,21 @@
         <button ng-click="degreeAdd()"> Create Rubric</button>
     </div>
     <div id="wrapper">
-        <div class="columns">
-        </div>
+        <ul>
+            <li ng-repeat="x in degreeView">
+                <ul>
+                    <li>id: {[{x._id}]}</li>
+                    <li>dname: {[{x.title}]}</li>
+                    <li>acronym: {[{x.acronym}]}</li>
+                    <li ng-repeat="x in courseView">
+                        <ul>
+                            <li>id: {[{x._id}]}</li>
+                            <li>description: {[{x.description}]}</li>
+                            <li>acronym: {[{x.acronym}]}</li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
     </div>
 </div>
