added sockets for updating a specific rubric.

--- a/public/views/addRubric.html
+++ b/public/views/addRubric.html
@@ -1,13 +1,11 @@
-<div ng-controller="secondController" class="addRubric">
-<<<<<<< HEAD
-	<form action="#">
+<div class="addRubric">
 		<div>
 			<h1>Abriviated title</h1>
 			<h2>Full title here</h2>
 		</div>
 		
 		<label for="courseTitle">RubricTitle</label>
-		<input type="text" name="title" id="courseTitle" placeholder="title">
+		<input type="text" data-ng-model="" placeholder="title">
 
 		<label for="courseCode">Section Titles</label>
 		<input type="text" name="code" id="courseCode" placeholder="Section Title">
@@ -19,21 +17,8 @@
 		<input type="text" name="code" id="courseCode" placeholder="Grade Options(100, 75, 50, 25, 0)">
 
 		<input ng-click="fetchAll()" type="submit" value="Add">
-	</form>
-=======
-   
-    <div id="rubricSearch">
-        <h1> Create Rubric</h1>
-        
-        <label>Rubic Name:</label>
-        <input type="text" ng-model="rubricTitle" placeholder="" />
-        
-        <label>Content:</label>
-        <input type="text" ng-model="rubricContent" placeholder="" />
-        
-        <button ng-click="rubricAdd()"> Create </button>
-        
-    </div>
 
->>>>>>> 83046a4479a7509ae734074aac92d88c57c78b11
+        <input type="button" value="Edit Existing Rubric" value="add">
+
+
 </div>
