--- a/public/views/addSection.html
+++ b/public/views/addSection.html
@@ -1,5 +1,5 @@
 <div ng-controller="secondController">
-
+{[{ error }]}
     <label for="sectionTitle">Section Name: </label>
     <input type="text" ng-model="sectionTitle" name="title" id="sectionTitle" placeholder="title">
 
