--- a/public/views/addDegree.html
+++ b/public/views/addDegree.html
@@ -19,6 +19,7 @@
                             <li>id: {[{x._id}]}</li>
                             <li>description: {[{x.description}]}</li>
                             <li>acronym: {[{x.acronym}]}</li>
+                            <li><a href="#/editCourse/{[{x._id}]}">Edit Course</a></li>
                         </ul>
                     </li>
                 </ul>
