fixing the side nav icons

--- a/views/layouts/default.handlebars
+++ b/views/layouts/default.handlebars
@@ -14,7 +14,7 @@
  <div id="sideNav">
         <ul>
             <li><a href="#" class="logo">Pro Rubrics</a></li>
-            <li><a href="#">Search</a></li>
+            <li><img src="http://i.imgur.com/z1gsYeg.png" class="navIcons"><a href="#">Search</a></li>
             <li><a href="#">Degree</a></li>
             <li><a href="#">Class</a></li>
         </ul>
