--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -37,6 +37,7 @@ edit()
 	position fixed
 	
 .logo
+	col(1/1)
 	margin-bottom 6%
 	font-family 'futura'
 	font-size 3em
@@ -49,13 +50,16 @@ li
 	list-style-type none
 	
 ul li a
-	col(1/3)
-	stack()
+	col(4/5)
 	padding 8% 0
 	text-decoration none
 	color white
 	font-size 1.4em
 	font-family primaryFont
+	
+.navIcons
+	col(1/5)
+	
 	
 ul li a:hover
 	background #192128
