--- a/assets/views/addRubric.html
+++ b/assets/views/addRubric.html
@@ -9,8 +9,12 @@
         <label>Content:</label>
         <input type="text" ng-model="rubricContent" placeholder="" />
         
-                <label>Grade Tiers:</label>
-        <input type="text" ng-model="rubricTiers" placeholder="" />
+        <label>Grade Tiers:</label>
+        <tags-input 
+           min-length="1"
+           max-length='3'
+           allowed-tags-pattern='^[0-9]+$'  
+           type="text" ng-model="tags" placeholder="" />
         
         <button ng-click="rubricAdd()"> Create </button>
         
