--- a/assets/views/addRubric.html
+++ b/assets/views/addRubric.html
@@ -1,23 +1,19 @@
 <div ng-controller="rubricController" class="addRubric">
-   
+
     <div id="rubricSearch">
         <h1> Create Rubric</h1>
-        
+
         <label>Rubic Name:</label>
         <input type="text" ng-model="rubricTitle" placeholder="" />
-        
+
         <label>Content:</label>
         <input type="text" ng-model="rubricContent" placeholder="" />
-        
+
         <label>Grade Tiers:</label>
-        <tags-input 
-           min-length="1"
-           max-length='3'
-           allowed-tags-pattern='^[0-9]+$'  
-           type="text" ng-model="tags" placeholder="" />
-        
+        <tags-input min-length="1" max-length='3' allowed-tags-pattern='^[0-9]+$' type="text" ng-model="tags" placeholder="ex. 100, 75, 40, 0" />
+
         <button ng-click="rubricAdd()"> Create </button>
-        
+
     </div>
 
 </div>
