--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -8,7 +8,7 @@ lightColor = #FBF7E4
 primaryFont = 'futura'
 secondaryFont = 'baskerville Old Face'
 
-edit()
+// edit()
 
 .rubricbuttons
   	color #000000
