--- a/views/layouts/default.handlebars
+++ b/views/layouts/default.handlebars
@@ -15,8 +15,8 @@
         <ul>
             <li><a href="#" class="logo">Pro Rubrics</a></li>
             <li><img src="http://i.imgur.com/z1gsYeg.png" class="navIcons"><a href="#">Search</a></li>
-            <li><a href="#">Degree</a></li>
-            <li><a href="#">Class</a></li>
+            <li><img src="http://i.imgur.com/uGPaprI.png" class="navIcons"><a href="#">Degree</a></li>
+            <li><img src="http://i.imgur.com/iHyKCKo.png" class="navIcons"><a href="#">Class</a></li>
         </ul>
     </div>
  <div ng-view class='mainDefaultBody'>
