--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -4,11 +4,15 @@ hover = background #424242
 mainColor = #38495D
 secondaryColor = #377992
 darkColor = #192128
+lighterBlue = #377992
 lightColor = #FBF7E4
 primaryFont = 'futura'
 secondaryFont = 'baskerville Old Face'
 
 edit()
+
+body
+	background #FBF7E4
 
 .rubricbuttons
   	color #000000
@@ -33,7 +37,7 @@ edit()
 	float left
 	background #38495D
 	text-align center
-	min-height 700px
+	height 100%
 	position fixed
 	
 .logo
@@ -50,18 +54,20 @@ li
 	list-style-type none
 	
 ul li a
-	col(4/5)
+	col(4/6)
 	padding 8% 0
+	text-align left
 	text-decoration none
 	color white
 	font-size 1.4em
 	font-family primaryFont
 	
 .navIcons
-	col(1/5)
+	col(1/6)
+	span(1/6)
+	padding 6.5% 8%
 	
-	
-ul li a:hover
+ul li :hover
 	background #192128
 
 .mainDefaultBody
@@ -70,7 +76,6 @@ ul li a:hover
 	width 85%
 	float right
 	background #FBF7E4
-	height 1000px
 	//Putting CSS Gradients on this breaks the Jeet apparently.
 
 .rubricSearch
@@ -248,7 +253,89 @@ ul li a:hover
 .degree button:hover
 	background #424242
 	
-
+//<!--******************** Audit Page Design ********************-->
+.audit
+	center(500px)
+	background mainColor
+	padding-bottom 1%
+	
+	h1
+		col(1/1)
+		font-family 'futura'
+		color white
+		padding-left 2%
+		font-weight 100
+		font-size 2em
+		
+	h2
+		font-family 'futura'
+		color white
+		font-weight 100
+		padding-left 2%
+		font-size 1.4em
+		
+	header
+		background darkColor
+		color white
+		font-family primaryFont
+		font-size 2em
+		padding 3% 2%
+		
+	dl
+		
+		center(450px)
+		background white
+		padding 2%
+		
+	dt
+		color mainColor
+		font-family primaryFont
+		font-size 2em
+		padding-left 2%
+	dd
+		font-family secondaryFont
+		padding 2%
+		line-height 1.5
+		margin-left 0
+		
+	li
+		col(1/4)
+		span(1/4)
+		
+		button
+			width 100%
+			background-color #D32F2F
+			color white
+			border none
+			border-right 1px #962626 solid
+			font-size 1.5em
+			padding 2% 0
+			
+		button:hover
+			background-color #962626
+			color white
+			cursor pointer
+	
+	textarea
+		col(1/1)
+		font-family secondaryFont
+		font-size 1.3em
+		
+	p
+		button
+			col(1/3)
+			shift(1/3)
+			background #7D9402
+			color #414904
+			font-family primaryFont	
+			font-size 1.5em	
+			border none
+			border-bottom 3px #414904 solid
+			border-radius 5px
+		
+		button:hover
+			background #414904
+			color #E7E8D1
 //<!--******************** Pintrest like coloumns ********************-->
 
 .wrapper
