Added back button function and to update pages

--- a/assets/views/editCourse.html
+++ b/assets/views/editCourse.html
@@ -1,4 +1,5 @@
 <div ng-controller="editCourse" class="mainDefaultBody">
+    <button ng-click="navBack()">back</button>
     <label>{[{ editData._id }]}</label>
     <input ng-model="editData.title">
     <input ng-model="editData.acronym">
