--- a/assets/views/editDegree.html
+++ b/assets/views/editDegree.html
@@ -1,4 +1,5 @@
 <div ng-controller="editDegree" class="mainDefaultBody">
+    <button ng-click="navBack()">back</button>
     <label>{[{ degreeEdit._id }]}</label>
     <input ng-model="degreeEdit.title">
     <input ng-model="degreeEdit.acronym">
