Intergration with some design

--- a/assets/views/courses.html
+++ b/assets/views/courses.html
@@ -1,5 +1,5 @@
 <div ng-controller="coursesController" class="mainDefaultBody">
-    <div id="rubricSearch">
+    <div class="rubricSearch">
         <button ng-click="navBack()">back</button>
         <h1>Create Course</h1>
         <label>Course Name Here:</label>
