--- a/assets/views/searchBar.html
+++ b/assets/views/searchBar.html
@@ -1,10 +1,3 @@
-<div ng-controller="mainController">
+<gen-form data-payload="rubricFormData" data-callback="actionAdd(rubricFormData)"></gen-form>
 
-	<div class="rubricSearch">
-	    <h1> Create Your Rubric</h1>
-	    <input type="text" ng-model="degreeTitle" placeholder="Type the title of your rubric here"/>
-
-	    <button ng-click="degreeAdd()"> Create Rubric</button>
-	</div>
-
-</div>
+<tags-input min-length="1" max-length='3' allowed-tags-pattern='^[0-9]+$' type="text" ng-model="tags" placeholder="ex. 100, 75, 40, 0" />
