--- a/assets/views/searchBar.html
+++ b/assets/views/searchBar.html
@@ -1,1 +1,1 @@
-<gen-form data-payload="rubricFormData" data-callback="actionAdd(rubricFormData)"></gen-form>
+<gen-form data-payload="rubricFormData" data-callback="actionAdd()"></gen-form>
